// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateTime is rendered correctly to match the snapshot in case with description 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row wrap;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
}

.emotion-2 {
  margin-right: 0.5rem;
  font-weight: 600;
}

.emotion-4 {
  font-weight: bolder;
  color: hsla(212, 72%, 40%);
}

<DateTime
  date={2021-01-02T03:04:56.000Z}
  description="TEST DESCRIPTION"
>
  <ComponentWrapperDiv>
    <div
      className="emotion-0 emotion-1"
    >
      <DescriptionSpan>
        <span
          className="emotion-2 emotion-3"
        >
          TEST DESCRIPTION:
        </span>
      </DescriptionSpan>
      <DateTime>
        <time
          className="emotion-4 emotion-5"
        >
          2021-01-02T03:04:56.000Z
        </time>
      </DateTime>
    </div>
  </ComponentWrapperDiv>
</DateTime>
`;

exports[`DateTime is rendered correctly to match the snapshot in case without description 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-flow: row wrap;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
}

.emotion-2 {
  font-weight: bolder;
  color: hsla(212, 72%, 40%);
}

<DateTime
  date={2021-01-02T03:04:56.000Z}
>
  <ComponentWrapperDiv>
    <div
      className="emotion-0 emotion-1"
    >
      <DateTime>
        <time
          className="emotion-2 emotion-3"
        >
          2021-01-02T03:04:56.000Z
        </time>
      </DateTime>
    </div>
  </ComponentWrapperDiv>
</DateTime>
`;
